--- a/src/MoneyManager.Web/Pages/RecurringTransactions.razor
+++ b/src/MoneyManager.Web/Pages/RecurringTransactions.razor
@@ -14,9 +14,9 @@
 <div class="container-fluid py-4">
     <div class="row mb-4">
         <div class="col-12">
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center gap-3">
                 <h1 class="mb-0">
-                    <i class="fas fa-repeat text-primary"></i> Transaçõeses Recorrentes
+                    <i class="fas fa-repeat text-primary"></i> Transações Recorrentes
                 </h1>
                 <button class="btn btn-primary" @onclick="ShowAddModal">
                     <i class="fas fa-plus"></i> Nova Recorrência
